Mejorada la portada
Separado en secciones los textos, arreglado los colores de las
secciones, los márgenes y configurado los botones para avanzar

--- a/index.html
+++ b/index.html
@@ -50,21 +50,40 @@
 				<div class="container">
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left"> 
-							ffhfghdhfgh
-						</div>
-						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
-							<p>MENU</p><a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#"><span></span></a>
+							<!-- Arriba a la izquierda -->
 						</div>
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown">Itxaso Espina, Arquitecta técnica</h1>
-							<a href="http://tympanus.net/codrops/?p=22554" class="use-btn animated fadeInUp">Trabajos</a> <a href="#about" class="learn-btn animated fadeInUp">Learn more <i class="fa fa-arrow-down"></i></a>
+							<a href="#ce" class="trans-btn animated fadeInUp">Certificaciones Energéticas<i class="fa fa-arrow-down"></i></a>
+							<a href="#ite" class="trans-btn animated fadeInUp">Inspecciones Técnicas de Edificios<i class="fa fa-arrow-down"></i></a>
+							<a href="#contact" class="white-btn animated fadeInUp">Contacto<i class="fa fa-arrow-down"></i></a>
 						</div>
 					</div>
 				</div>
 			</section>
 		</header>
+		<section class="explanation-white" id="ce">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>Certifaciones energéticas</h1>
+						<p>Certificados de eficiencia energética para quienes vayan a vender o alquilar una vivienda.<br /> El certificado energético consiste en analizar la envolvente y las instalaciones de la vivienda, realizar un informe del consumo energético y las emisiones de CO2 y finalmente registrarlo en Industria. </p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="explanation-blue" id="ite">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>Inspecciones Técnicas de Edificios (ITE)</h1>
+						<p>Inspecciones técnicas de edificios de más de 50 años o vayan a pedir ayudas para su rehabilitación.<br /> La inspección técnica consiste en analizar y dictaminar el estado del edificio (estructura, cubierta, fachada, accesibilidad y eficiencia energética) y presentar el grado de intervención de cada uno de los elementos.</p>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="video" id="about">
 			<div class="container">
 				<div class="row">
